--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,8 +1,8 @@
 l_english:
- EHR: "Ehrenia"
- EHR_ADJ: "Ehren"
- TML: "Tummland"
- TML_ADJ: "Tummic"
+ EHR:0 "Ehrenia"
+ EHR_ADJ:0 "Ehren"
+ TML:0 "Tummland"
+ TML_ADJ:0 "Tummic"
  DR1:0 "Drachenburg"
  NID:0 "Nidervlania"
  ADR:0 "Adria"
