--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  EHR:0 "Ehrenia"
  EHR_ADJ:0 "Ehren"
  TML:0 "Tummland"
@@ -39,10 +39,10 @@ l_english:
  VAU:0 "Vauenberg"
  KDM:0 "Keredenmarches"
  NRM:0 "Nordmark"
- LNF:0 "LesserNifthem"
+ LNF:0 "Lesser Nifthem"
  KND:0 "Karriend"
  BLU:0 "Blauwald"
- FLA:0 "FolindanLatiringen"
+ FLA:0 "Folindan-Latiringen"
  INF:0 "Infhem"
  ALR:0 "Altrenland"
  FEU:0 "Feurirland"
