--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -43,7 +43,7 @@
  KND:0 "Karriend"
  BLU:0 "Blauwald"
  FLA:0 "Folindan-Latiringen"
- INF:0 "Infhem"
+ INH:0 "Infhem"
  ALR:0 "Altrenland"
  FEU:0 "Feurirland"
  ELT:0 "Eltyren"
