--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -7,7 +7,7 @@
  PROV6:1 "Lund"
  PROV7:1 "Skaraborg"
  PROV8:0 "Dalaskogen"
- PROV9:0 "Hälsingland"
+ PROV9:0 "SEA 9"
  PROV10:0 "Jämtland"
  PROV11:0 "Västerbotten"
  PROV12:0 "Sjælland"
@@ -15,56 +15,56 @@
  PROV14:0 "Fyn"
  PROV15:1 "Vestjylland"
  PROV16:0 "Bohuslän"
- PROV17:0 "Akershus"
+ PROV17:0 "SEA 17"
  PROV18:0 "Lappland"
- PROV19:0 "Österbotten"
+ PROV19:0 "SEA 19"
  PROV20:0 "Trøndelag"
  PROV21:0 "Hålogaland"
  PROV22:1 "Opplanda"
  PROV23:1 "Bergenhus"
- PROV24:0 "Stavanger"
- PROV25:0 "Gotland"
- PROV26:0 "Halland"
- PROV27:0 "Åbo"
- PROV28:0 "Nyland"
- PROV29:0 "Tavastland"
- PROV30:0 "Viborg"
- PROV31:0 "Savolax"
- PROV32:0 "Kexholm"
- PROV33:0 "Neva"
- PROV34:0 "Ingermanland"
- PROV35:0 "Ösel"
- PROV36:0 "Reval"
- PROV37:0 "Livland"
- PROV38:0 "Riga"
- PROV39:0 "Goldingen"
- PROV40:0 "Memel"
- PROV41:0 "Königsberg"
- PROV42:0 "Warmia"
- PROV43:0 "Danzig"
- PROV44:0 "Hamburg"
- PROV45:0 "Lübeck"
- PROV46:0 "Rostock"
- PROV47:0 "Stralsund"
- PROV48:0 "Kolberg"
- PROV49:0 "Neumark"
- PROV50:0 "Berlin"
- PROV51:0 "Ruppin"
- PROV52:0 "Magdeburg"
- PROV53:0 "Lüneburg"
- PROV54:0 "Stade"
- PROV55:0 "Oldenburg"
- PROV56:0 "Osnabrück"
- PROV57:0 "Brunswick"
- PROV58:0 "Anhalt"
- PROV59:0 "Wittenberg"
- PROV60:0 "Bautzen"
- PROV61:0 "Dresden"
- PROV62:0 "Leipzig"
- PROV63:1 "Erfurt"
- PROV64:0 "Landshut"
- PROV65:0 "München"
- PROV66:0 "Bamberg"
+ PROV24:0 "Pohjoisrantainen"
+ PROV25:0 "Metsälammi"
+ PROV26:0 "Ambrisatama"
+ PROV27:0 "Pihlajakivi"
+ PROV28:0 "Aarnimetsä"
+ PROV29:0 "Suokorpi"
+ PROV30:0 "Aapotorni"
+ PROV31:0 "Aarnijärvi"
+ PROV32:0 "Sydänjoki"
+ PROV33:0 "Länsipää"
+ PROV34:0 "Guovdageaidnu"
+ PROV35:0 "Juhhánvuopmi"
+ PROV36:0 "Biejvvevuovdi"
+ PROV37:0 "Dálvadasvuopmi"
+ PROV38:0 "Pohjoisvuoristo"
+ PROV39:0 "Pohjoisvuoristo"
+ PROV40:0 "Kallioranta"
+ PROV41:0 "SEA 41"
+ PROV42:0 "Kultalampi"
+ PROV43:0 "Koivukorpi"
+ PROV44:0 "Metsäsydän"
+ PROV45:0 "Havuranta"
+ PROV46:0 "Rantahelmi"
+ PROV47:0 "Rantaniitty"
+ PROV48:0 "-"
+ PROV49:0 "-"
+ PROV50:0 "SEA 50"
+ PROV51:0 "Kalliokylä"
+ PROV52:0 "Karhukorpi"
+ PROV53:0 "Karhuvuori"
+ PROV54:0 "Pohjantähti"
+ PROV55:0 "SEA 55"
+ PROV56:0 "Lumitunturi"
+ PROV57:0 "Njuohččamávra"
+ PROV58:0 "Sáivomearkka"
+ PROV59:0 "Beaskačohkka"
+ PROV60:0 "Gáhkkorjávri"
+ PROV61:0 "Juovlamávra"
+ PROV62:0 "Báhčaveaivi"
+ PROV63:1 "Váibmu"
+ PROV64:0 "Ruoššavuotna"
+ PROV65:0 "Kaitatie"
+ PROV66:0 "Áhččohápmi"
  PROV67:0 "Nürnberg"
  PROV68:0 "Memmingen"
  PROV69:1 "Dortmund"
