--- a/localisation/aelian_l_english.yml
+++ b/localisation/aelian_l_english.yml
@@ -1,9 +1,15 @@
 ﻿l_english:
+ religious_school_soterian_tooltip:0 "Be overlord or a subject of a country with §YSoterian§! primary culture, but not §YDrachenic§! culture"
+ religious_school_ehren_tooltip:0 "Be overlord or a subject of a country with §YEhren§! primary culture"
+ religious_school_drachenic_tooltip:0 "Be overlord or a subject of a country with §YDrachenic§! primary culture"
  aelian:0 "Aelian"
  sigilian:0 "Sigilian"
  soterian_sigil:0 "Sigil of Soteria"
- soterial_sigil_desc:0 "SOTERIA DESC"
+ soterian_sigil_desc:0 "SOTERIA DESC"
  soterian_sigil_modifier:0 "Soterian influence"
  ehren_sigil:0 "Sigil of Ehrenia"
  ehren_sigil_desc:0 "EHRENIA DESC"
  ehren_sigil_modifier:0 "Ehrenic influence"
+ drachenic_sigil:0 "Sigil of Drachenia"
+ drachenic_sigil_desc:0 "DRACHEN DESC"
+ drachenic_sigil_modifier:0 "Drachenic influence"
