akerb setup part 2

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -50,26 +50,47 @@
  PLD:0 "Polderland"
  KUN:0 "Kunsdag"
  RAU:0 "Rautakaihäs"
- RAU_ADJ:0 ""
+ RAU_ADJ:0 "Rautakaihäser"
  AAP:0 "Aapotorni"
- AAP_ADJ:0 ""
+ AAP_ADJ:0 "Aapotorner"
  TUL:0 "Tulvayleinen"
- TUL_ADJ:0 ""
+ TUL_ADJ:0 "Tulvayleinener"
  NAI:0 "Naisenala"
- NAI_ADJ:0 ""
+ NAI_ADJ:0 "Naisenaler"
  KAT:0 "Kaitatie"
- KAT_ADJ:0 ""
+ KAT_ADJ:0 "Kaitatier"
  SKA:0 "Skäärrannik"
- SKA_ADJ:0 ""
+ SKA_ADJ:0 "Skäärranniker"
  MIE:0 "Miekkatihmiset"
- MIE_ADJ:0 ""
+ MIE_ADJ:0 "Miekkatihmiseter"
  PYH:0 "Pyhäkkönsä"
- PYH_ADJ:0 ""
+ PYH_ADJ:0 "Pyhäkkönsär"
  CIE:0 "Ciehralágan"
- CIE_ADJ:0 ""
+ CIE_ADJ:0 "Ciehraláganer"
  BIE:0 "Bieggolmaimánnat"
- BIE_ADJ:0 ""
+ BIE_ADJ:0 "Bieggolmaimánnatic"
  BAL:0 "Balwalasgiergge"
- BAL_ADJ:0 ""
+ BAL_ADJ:0 "Balwalasgierggen"
  VEN:0 "Venaklulle"
- VEN_ADJ:0 ""
+ VEN_ADJ:0 "Venaklullen"
+ ALT:0 "Altaliqadim"
+ ALT_ADJ:0 ""
+ NAH:0 "Al-Nahralnoriya"
+ NAH_ADJ:0 ""
+ RIY:0 "Riyaduna"
+ RIY_ADJ:0 ""
+ ALG:0 "Algharbiya"
+ ALG_ADJ:0 ""
+ ANT:0 "Antawil"
+ ANT_ADJ:0 ""
+ IGN:0 "Ignidunta"
+ IGN_ADJ:0 ""
+ NRB:0 "Narbonia"
+ NRB_ADJ:0 ""
+ PAD:0 "Padosi"
+ PAD_ADJ:0 ""
+ OLG:0 "Olegaria"
+ OLG_ADJ:0 ""
+ BRA:0 "Bratecia"
+ BRA_ADJ:0 ""
+ 
