--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -4,11 +4,15 @@
  TML:0 "Tummland"
  TML_ADJ:0 "Tummic"
  DR1:0 "Drachenburg"
+ DR1:0 "Drachenic"
  NID:0 "Nidervlania"
+ NID_ADJ:0 "Nider"
  ADR:0 "Adria"
+ ADR_ADJ:0 "Adric"
  FLT:0 "Faltinland"
  VLD:0 "Volodia"
  BOH:0 "Bohemia"
+ BOH_ADJ:0 "Bohemic"
  VTR:0 "Voltirenmark"
  ORD:0 "Ordirria"
  FAR:0 "Farmirria"
@@ -17,13 +21,14 @@
  WKR:0 "Westkardia"
  MKR:0 "Mittelkardia"
  BRN:0 "Brensigland"
+ BRN_ADJ:0 "Brensiglander"
  KRB:0 "Kredberg"
  IC1:0 "Svorburg"
  IC2:0 "Meusserstadt"
  IC3:0 "Imperstadt"
  IC4:0 "Freiburg"
  IC5:0 "Merstadt"
- IC6:0 "Altendrachenburg"
+ IC6:0 "Alten Drachenburg"
  IC7:0 "Stipule"
  IC8:0 "Altstadt"
  IC9:0 "Nurrstadt"
