akerb setup part 4

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -90,7 +90,7 @@
  ANT_ADJ:0 ""
  IGN:0 "Ignidunta"
  IGN_ADJ:0 ""
- NRB:0 "Narbonia"
+ NRB:0 "Narbone"
  NRB_ADJ:0 ""
  PAD:0 "Padosi"
  PAD_ADJ:0 ""
