--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -65,14 +65,282 @@
  PROV64:0 "Ruoššavuotna"
  PROV65:0 "Kaitatie"
  PROV66:0 "Áhccohápmi"
- PROV111:0 "Imperstadter Coast"
+ PROV67:0 ""
+ PROV68:0 ""
+ PROV69:1 ""
+ PROV70:1 ""
+ PROV71:0 ""
+ PROV72:0 ""
+ PROV73:0 ""
+ PROV74:0 ""
+ PROV75:1 ""
+ PROV76:0 ""
+ PROV77:0 ""
+ PROV78:0 ""
+ PROV79:0 ""
+ PROV80:0 ""
+ PROV81:1 ""
+ PROV82:0 ""
+ PROV83:0 ""
+ PROV84:0 ""
+ PROV85:0 ""
+ PROV86:0 ""
+ PROV87:0 ""
+ PROV88:0 ""
+ PROV89:0 ""
+ PROV90:1 ""
+ PROV91:0 ""
+ PROV92:1 ""
+ PROV93:0 ""
+ PROV94:0 ""
+ PROV95:0 ""
+ PROV96:0 ""
+ PROV97:1 ""
+ PROV98:0 ""
+ PROV99:0 ""
+ PROV100:0 ""
+ PROV101:0 ""
+ PROV102:0 ""
+ PROV103:1 ""
+ PROV104:0 ""
+ PROV105:0 ""
+ PROV106:0 ""
+ PROV107:0 ""
+ PROV108:0 ""
+ PROV109:0 ""
+ PROV110:0 ""
+ PROV111:0 "Imperstadter Coast" 
+ PROV112:0 ""
+ PROV113:0 ""
+ PROV114:0 ""
  PROV115:0 "Voltireni Sea"
+ PROV116:0 ""
+ PROV117:0 ""
+ PROV118:0 "Albarroca"
+ PROV119:0 "Blava Puerto"
+ PROV120:0 ""
+ PROV121:0 ""
+ PROV122:0 ""
+ PROV123:0 ""
+ PROV124:0 ""
+ PROV125:0 ""
+ PROV126:0 ""
+ PROV127:0 ""
+ PROV128:1 ""
+ PROV129:0 ""
+ PROV130:0 ""
+ PROV131:0 ""
+ PROV132:0 ""
+ PROV133:2 ""
+ PROV134:0 ""
+ PROV135:0 ""
+ PROV136:1 ""
+ PROV137:0 "Eliana"
+ PROV138:0 ""
+ PROV139:0 ""
+ PROV140:0 ""
+ PROV141:1 ""
+ PROV142:0 ""
+ PROV143:1 ""
+ PROV144:0 ""
+ PROV145:0 ""
+ PROV146:0 ""
+ PROV147:0 ""
+ PROV148:0 ""
+ PROV149:0 ""
+ PROV150:1 ""
+ PROV151:0 ""
+ PROV152:0 ""
+ PROV153:0 ""
+ PROV154:0 ""
+ PROV155:0 ""
+ PROV156:0 ""
+ PROV157:0 ""
+ PROV158:0 ""
+ PROV159:0 ""
+ PROV160:0 ""
+ PROV161:0 ""
+ PROV162:0 ""
+ PROV163:0 ""
+ PROV164:0 ""
+ PROV165:0 ""
+ PROV166:0 ""
+ PROV167:0 ""
+ PROV168:1 ""
+ PROV169:0 ""
+ PROV170:0 ""
+ PROV171:1 ""
+ PROV172:1 ""
+ PROV173:0 ""
+ PROV174:3 ""
+ PROV175:0 ""
+ PROV176:0 ""
+ PROV177:0 ""
+ PROV178:0 ""
+ PROV179:0 ""
+ PROV180:1 ""
+ PROV181:0 ""
+ PROV182:1 ""
+ PROV183:0 ""
+ PROV184:0 ""
+ PROV185:0 ""
+ PROV186:1 ""
+ PROV187:0 "Bosque salvaje"
+ PROV188:0 ""
+ PROV189:0 "Sierra Verde"
+ PROV190:1 ""
+ PROV191:1 ""
+ PROV192:1 "Dijonnais"
+ PROV193:0 "Franche-Comté"
  PROV194:0 "Volodian Strait"
+ PROV195:0 "Limousin"
+ PROV196:0 "Toulouse"
+ PROV197:0 "Roussillon"
+ PROV198:0 "Rouergue"
+ PROV199:0 "Auvergne"
+ PROV200:1 "Montpellier"
+ PROV201:0 "Aix"
+ PROV202:0 "Avignon"
+ PROV203:0 "Lyonnais"
+ PROV204:0 "Dauphiné"
+ PROV205:1 "Chambery"
+ PROV206:2 "Corunna"
+ PROV207:0 "Asturias"
+ PROV208:0 "León"
+ PROV209:0 "Vizcaya"
+ PROV210:0 "Navarra"
+ PROV211:1 "Huesca"
  PROV212:0 "Drachenmaw Southern Coast"
+ PROV213:0 "Barcelona"
+ PROV214:0 "Zaragoza"
+ PROV215:1 "Valladolid"
+ PROV216:0 "Salamanca"
+ PROV217:0 "Madrid"
+ PROV218:0 "Badajoz"
+ PROV219:0 "Toledo"
+ PROV220:0 "València"
+ PROV221:0 "Murcia"
+ PROV222:0 "Almería"
+ PROV223:0 "Granada"
+ PROV224:0 "Sevilla"
+ PROV225:0 "Córdoba"
+ PROV226:0 "Gibraltar"
+ PROV227:0 "Lisboa"
+ PROV228:0 "Beira"
+ PROV229:0 "Beja"
+ PROV230:0 "Algarve"
+ PROV231:0 "Porto"
+ PROV232:0 "Bragança"
+ PROV233:0 "Cornwall"
+ PROV234:0 "Hampshire"
+ PROV235:0 "Kent"
+ PROV236:0 "London"
+ PROV237:1 "Oxford"
+ PROV238:0 "Essex"
+ PROV239:1 "Gloucester"
+ PROV240:1 "Shrewsbury"
+ PROV241:1 "Glamorgan"
+ PROV242:0 "Gwynedd"
+ PROV243:0 "Lincolnshire"
+ PROV244:0 "Lancashire"
+ PROV245:1 "York"
+ PROV246:0 "Northumberland"
+ PROV247:0 "Cumbria"
+ PROV248:0 "Lothian"
+ PROV249:0 "Ayrshire"
+ PROV250:1 "Perth"
+ PROV251:1 "Aberdeen"
+ PROV252:0 "Inverness"
+ PROV253:1 "Outer Hebrides"
+ PROV254:0 "Poznan"
+ PROV255:0 "Kalisz"
+ PROV256:0 "Plock"
+ PROV257:0 "Warszawa"
+ PROV258:0 "Sieradz"
+ PROV259:0 "Sandomierz"
+ PROV260:0 "Lublin"
+ PROV261:0 "Halicz"
+ PROV262:0 "Krakow"
+ PROV263:0 "Ratibor"
+ PROV264:0 "Breslau"
+ PROV265:1 "Brno"
+ PROV266:0 "Prague"
+ PROV267:0 "Plzen"
+ PROV268:1 "Suceava"
+ PROV269:0 "Podlasie"
+ PROV270:0 "Trakai"
+ PROV271:0 "Samogitia"
+ PROV272:0 "Vilna"
+ PROV273:0 "Latgalia"
+ PROV274:0 "Pskov"
+ PROV275:0 "Polotsk"
+ PROV276:0 "Minsk"
+ PROV277:0 "Brest"
+ PROV278:0 "Pinsk"
+ PROV279:0 "Volhynia"
+ PROV280:0 "Kiev"
+ PROV281:0 "Podolia"
+ PROV282:0 "Yedisan"
+ PROV283:0 "Zaporozhia"
+ PROV284:0 "Crimea"
+ PROV285:0 "Caffa"
+ PROV286:0 "Azov"
+ PROV287:0 "Kuban"
+ PROV288:0 "Lower Don"
+ PROV289:0 "Chernigov"
+ PROV290:0 "Poltava"
+ PROV291:0 "Kharkov"
+ PROV292:0 "Mogilev"
+ PROV293:0 "Smolensk"
+ PROV294:0 "Tver"
+ PROV295:0 "Moskva"
+ PROV296:0 "Kaluga"
+ PROV297:0 "Bryansk"
+ PROV298:0 "Kursk"
+ PROV299:0 "Voronezh"
+ PROV300:0 "Tula"
+ PROV301:0 "Ryazan"
+ PROV302:0 "Tambov"
+ PROV303:0 "Saratov"
+ PROV304:0 "Penza"
+ PROV305:0 "Perm"
+ PROV306:0 "Nizhny Novgorod"
+ PROV307:0 "Vladimir"
+ PROV308:0 "Yaroslavl"
+ PROV309:0 "Olonets"
+ PROV310:0 "Novgorod"
+ PROV311:0 "Kholm"
+ PROV312:0 "Beloozero"
+ PROV313:0 "Soroka"
+ PROV314:0 "Vologda"
+ PROV315:0 "Finnmark"
+ PROV316:0 "Kocaeli"
+ PROV317:0 "Hüdavendigar"
+ PROV318:0 "Sugla"
+ PROV319:0 "Mentese"
+ PROV320:0 "Rhodes"
+ PROV321:0 "Cyprus"
  PROV322:0 "Drachenmaw Northern Coast"
+ PROV323:0 "Konya"
+ PROV324:0 "Karaman"
+ PROV325:0 "Kastamonu"
+ PROV326:0 "Ankara"
+ PROV327:0 "Adana"
+ PROV328:0 "Sinop"
+ PROV329:0 "Sivas"
+ PROV330:0 "Trebizond"
+ PROV331:0 "Erzurum"
+ PROV332:0 "Marash"
+ PROV333:2 "Mallorca"
+ PROV334:0 "Tangiers"
+ PROV335:0 "Melilla"
+ PROV336:0 "Tlemcen"
+ PROV337:0 "Oran"
+ PROV338:0 "Mitidja"
+ PROV339:0 "Kabylia"
  PROV3916:0 "Bohiumgebirge"
  PROV3917:0 "Bohiumgebirge"
- PROV3918:0 "Kredberg
+ PROV3918:0 "Kredberg"
  PROV3919:0 "Bohiumgebirge"
  PROV3924:0 "Krswiringebirge"
  PROV3925:0 "Sudkredberg"
