--- a/localisation/ages_l_english.yml
+++ b/localisation/ages_l_english.yml
@@ -1,2 +1,14 @@
 ﻿l_english:
+ age_of_discovery_short:0 "Innovations"
+ age_of_reformation_short:0 "Reformation"
+ age_of_absolutism_short:0 "Absolutism"
+ age_of_revolutions_short:0 "Revolutions"
+ age_of_discovery:0 "Age of Innovations"
+ age_of_discovery_desc:1 "innovation desc"
+ age_of_reformation:0 "Age of Reformation"
+ age_of_reformation_desc:1 "From East to West this is the age of religious conviction, debates and mass movements. In Europe Protestantism is entrenched while millenarianism takes hold of Iran and religious Syncretism shapes Indian society."
+ age_of_absolutism:0 "Age of Absolutism"
+ age_of_absolutism_desc:1 "As governments wrest the absolute power in their countries from other parties, they are now able to devote themselves to the building of Empires. This is the age of the state, of rulers, and their armies."
+ age_of_revolutions:0 "Age of Revolutions"
+ age_of_revolutions_desc:1 "The questioning of rights, authority and the world itself during the Enlightenment has led to the rejection of the Ancient Regime. As Absolutism gives way to Revolution kingdoms may have to make place for Republics."
  obj_have_march_tooltip:0 "Have at least 1 march"
