pohjoismaa setup + river estuaries

--- a/localisation/prov_modifiers_l_english.yml
+++ b/localisation/prov_modifiers_l_english.yml
@@ -12,3 +12,7 @@
  feur_estuary_modifier:0 "Feur Estuary"
  polder_estuary_modifier:0 "Polder Estuary"
  hatrien_estuary_modifier:0 "Hatrien Estuary"
+ korpikoski_estuary_modifier:0 "Nordweg Estuary"
+ rinanakkain_estuary_modifier:0 "Nordweg Estuary"
+ alnahrdhabi_estuary_modifier:0 "Nordweg Estuary"
+ 
