--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -79,24 +79,34 @@
  VEN:0 "Venaklulle"
  VEN_ADJ:0 "Venaklullen"
  ALT:0 "Altaliqadim"
- ALT_ADJ:0 ""
+ ALT_ADJ:0 "Altaliqadimi"
  NAH:0 "Al-Nahralnoriya"
- NAH_ADJ:0 ""
+ NAH_ADJ:0 "Nahralnoriyan"
  RIY:0 "Riyaduna"
- RIY_ADJ:0 ""
+ RIY_ADJ:0 "Riyadun"
  ALG:0 "Algharbiya"
- ALG_ADJ:0 ""
+ ALG_ADJ:0 "Algharbiyan"
  ANT:0 "Antawil"
- ANT_ADJ:0 ""
+ ANT_ADJ:0 "Antawili"
  IGN:0 "Ignidunta"
- IGN_ADJ:0 ""
+ IGN_ADJ:0 "Ignidunter"
  NRB:0 "Narbone"
- NRB_ADJ:0 ""
+ NRB_ADJ:0 "Narbonese"
  PAD:0 "Padosi"
- PAD_ADJ:0 ""
+ PAD_ADJ:0 "Padosian"
  OLG:0 "Olegaria"
- OLG_ADJ:0 ""
+ OLG_ADJ:0 "Olegar"
  BRA:0 "Bratecia"
- BRA_ADJ:0 ""
+ BRA_ADJ:0 "Bratecian"
  HAR:0 "Harba"
- HAR_ADJ:0 ""
+ HAR_ADJ:0 "Harban"
+ PUI:0 "Puiduhakkurmaa"
+ PUI_ADJ:0 "Puiduhakkurmic"
+ POH:0 "Pohjavalvur"
+ POH_ADJ:0 "Pohjavalvic"
+ MLP:0 "Maalopp"
+ MLP_ADJ:0 "Maaloppic"
+ VAN:0 "Vanavalvur"
+ VAN_ADJ:0 "Vanavlvic"
+ LOU:0 "Lounavalvur"
+ LOU_ADJ:0 "Lounavalvic"
