--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -198,48 +198,48 @@
  PROV197:0 ""
  PROV198:0 ""
  PROV199:0 "Altaqadim"
- PROV200:1 "Montpellier"
- PROV201:0 "Aix"
- PROV202:0 "Avignon"
- PROV203:0 "Lyonnais"
- PROV204:0 "Dauphiné"
- PROV205:1 "Chambery"
- PROV206:2 "Corunna"
- PROV207:0 "Asturias"
- PROV208:0 "León"
- PROV209:0 "Vizcaya"
- PROV210:0 "Navarra"
- PROV211:1 "Huesca"
+ PROV200:1 ""
+ PROV201:0 ""
+ PROV202:0 ""
+ PROV203:0 ""
+ PROV204:0 ""
+ PROV205:1 ""
+ PROV206:2 ""
+ PROV207:0 ""
+ PROV208:0 ""
+ PROV209:0 ""
+ PROV210:0 ""
+ PROV211:1 ""
  PROV212:0 "Drachenmaw Southern Coast"
- PROV213:0 "Barcelona"
- PROV214:0 "Zaragoza"
- PROV215:1 "Valladolid"
- PROV216:0 "Salamanca"
- PROV217:0 "Madrid"
- PROV218:0 "Badajoz"
- PROV219:0 "Toledo"
- PROV220:0 "València"
- PROV221:0 "Murcia"
- PROV222:0 "Almería"
- PROV223:0 "Granada"
- PROV224:0 "Sevilla"
- PROV225:0 "Córdoba"
- PROV226:0 "Gibraltar"
- PROV227:0 "Lisboa"
- PROV228:0 "Beira"
- PROV229:0 "Beja"
- PROV230:0 "Algarve"
- PROV231:0 "Porto"
- PROV232:0 "Bragança"
- PROV233:0 "Cornwall"
- PROV234:0 "Hampshire"
- PROV235:0 "Kent"
- PROV236:0 "London"
- PROV237:1 "Oxford"
- PROV238:0 "Essex"
- PROV239:1 "Gloucester"
- PROV240:1 "Shrewsbury"
- PROV241:1 "Glamorgan"
+ PROV213:0 ""
+ PROV214:0 ""
+ PROV215:1 ""
+ PROV216:0 ""
+ PROV217:0 ""
+ PROV218:0 ""
+ PROV219:0 ""
+ PROV220:0 ""
+ PROV221:0 ""
+ PROV222:0 ""
+ PROV223:0 ""
+ PROV224:0 ""
+ PROV225:0 ""
+ PROV226:0 ""
+ PROV227:0 ""
+ PROV228:0 ""
+ PROV229:0 ""
+ PROV230:0 ""
+ PROV231:0 ""
+ PROV232:0 ""
+ PROV233:0 ""
+ PROV234:0 "Uzkolian Strait"
+ PROV235:0 ""
+ PROV236:0 ""
+ PROV237:1 ""
+ PROV238:0 ""
+ PROV239:1 ""
+ PROV240:1 ""
+ PROV241:1 ""
  PROV242:0 "Gwynedd"
  PROV243:0 "Lincolnshire"
  PROV244:0 "Lancashire"
