sigils + emperor fix

--- a/localisation/aelian_l_english.yml
+++ b/localisation/aelian_l_english.yml
@@ -9,6 +9,12 @@
  religious_school_drachenic_tooltip:0 "Be overlord or a subject of a country with §YDrachenic§! primary culture"
  religious_school_drachenic_tooltip_2:0 "Be part of the Holy PLACEHOLDER Empire while emperor has §YDrachenic§! primary culture"
 
+ religious_school_ignider_tooltip:0 "Be overlord or a subject of a country with §YIBERIAN§! primary culture"
+ religious_school_ignider_tooltip_2:0 "Be part of the Holy PLACEHOLDER Empire while emperor has §YIBERIAN§! primary culture"
+
+ religious_school_pohjoister_tooltip:0 "Be overlord or a subject of a country with §YPohjoista§! primary culture"
+ religious_school_pohjoister_tooltip_2:0 "Be part of the Holy PLACEHOLDER Empire while emperor has §YPohjoista§! primary culture"
+
  aelian:0 "Aelian"
  sigilian:0 "Sigilian"
  soterian_sigil:0 "Sigil of Soteria"
@@ -20,3 +26,9 @@
  drachenic_sigil:0 "Sigil of Drachenia"
  drachenic_sigil_desc:0 "DRACHEN DESC"
  drachenic_sigil_modifier:0 "Drachenic influence"
+ ignider_sigil:0 "Sigil of Ignidia"
+ ignider_sigil_desc:0 "IGNIDER DESC"
+ ignider_sigil_modifier:0 "Ignider influence"
+ pohjoister_sigil:0 "Sigil of Pohjoista"
+ pohjoister_sigil_desc:0 "POHJOISTER DESC"
+ pohjoister_sigil_modifier:0 "Pohjoister influence"
