marstonia + some loc

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -161,3 +161,44 @@
  VAN_ADJ:0 "Vanavlvic"
  LOU:0 "Lounavalvur"
  LOU_ADJ:0 "Lounavalvic"
+
+ DAG:0 "Dagica"
+ DAG_ADJ:0 "Dagican"
+ ABO:0 "Abochia"
+ ABO_ADJ:0 "Abochian"
+ CHE:0 "Chelufia"
+ CHE_ADJ:0 "Chelufian"
+ CHA:0 "Chalia"
+ CHA_ADJ:0 "Chalian"
+ CHO:0 "Chofeudia"
+ CHO_ADJ:0 "Chofeudian"
+ CRS:0 "Crossed Spears"
+ CRS_ADJ:0 "crs adjhdiosahdiol"
+ ANA:0 "Antauria"
+ ANA_ADJ:0 "Antaurian"
+ HER:0 "Hermatia"
+ HER_ADJ:0 "Hermatian"
+ VET:0 "Vetica"
+ VET_ADJ:0 "Vetican"
+ PEL:0 "Pelian"
+ PEL_ADJ:0 "Pelianic"
+ TER:0 "Terolia"
+ TER_ADJ:0 "Terolian"
+
+ UZK:0 "Uzkolia"
+ UZK_ADJ:0 "Uzkolian"
+ ZIE:0 "Ziemelia"
+ ZIE_ADJ:0 "Ziemelian"
+ HRC:0 "Hercogaosta"
+ HRC_ADJ:0 "Hercogaostan"
+ ALI:0 "Aligeland"
+ ALI_ADJ:0 "Aligelander"
+ BIR:0 "Birzas"
+ BIR_ADJ:0 "Birzaser"
+ MUT:0 "Mutova"
+ MUT_ADJ:0 "Mutovian"
+ MEZ:0 "Mezonia"
+ MEZ_ADJ:0 "Mezonian"
+ EGL:0 "Eglevkuza"
+ EGL_ADJ:0 "Eglevkuzan"
+ 
