--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
  PROV1:0 "Stockholm"
  PROV2:0 "Östergötland"
- PROV3:1 "Kalmar"
+ PROV3:0 "Kalmar"
  PROV4:0 "Bergslagen"
  PROV5:0 "Värmland"
- PROV6:1 "Lund"
- PROV7:1 "Skaraborg"
+ PROV6:0 "Lund"
+ PROV7:0 "Skaraborg"
  PROV8:0 "Dalaskogen"
  PROV9:0 "SEA 9"
  PROV10:0 "Jämtland"
@@ -13,15 +13,15 @@
  PROV12:0 "Sjælland"
  PROV13:0 "Slesvig"
  PROV14:0 "Fyn"
- PROV15:1 "Vestjylland"
+ PROV15:0 "Vestjylland"
  PROV16:0 "Bohuslän"
  PROV17:0 "SEA 17"
  PROV18:0 "Lappland"
  PROV19:0 "SEA 19"
  PROV20:0 "Trøndelag"
  PROV21:0 "Hålogaland"
- PROV22:1 "Opplanda"
- PROV23:1 "Bergenhus"
+ PROV22:0 "Opplanda"
+ PROV23:0 "Bergenhus"
  PROV24:0 "Pohjoisrantainen"
  PROV25:0 "Metsälammi"
  PROV26:0 "Ambrisatama"
@@ -61,25 +61,25 @@
  PROV60:0 "Gáhkkorjávri"
  PROV61:0 "Juovlamávra"
  PROV62:0 "Báhcaveaivi"
- PROV63:1 "Váibmu"
+ PROV63:0 "Váibmu"
  PROV64:0 "Ruoššavuotna"
  PROV65:0 "Kaitatie"
  PROV66:0 "Áhccohápmi"
  PROV67:0 ""
  PROV68:0 ""
- PROV69:1 ""
- PROV70:1 "Azalkaba"
+ PROV69:0 ""
+ PROV70:0 "Azalkaba"
  PROV71:0 ""
  PROV72:0 ""
  PROV73:0 ""
  PROV74:0 ""
- PROV75:1 ""
+ PROV75:0 ""
  PROV76:0 ""
  PROV77:0 ""
  PROV78:0 ""
  PROV79:0 ""
  PROV80:0 ""
- PROV81:1 ""
+ PROV81:0 ""
  PROV82:0 ""
  PROV83:0 ""
  PROV84:0 ""
@@ -88,20 +88,20 @@
  PROV87:0 ""
  PROV88:0 ""
  PROV89:0 ""
- PROV90:1 ""
+ PROV90:0 ""
  PROV91:0 ""
- PROV92:1 ""
+ PROV92:0 ""
  PROV93:0 ""
  PROV94:0 ""
  PROV95:0 ""
  PROV96:0 ""
- PROV97:1 ""
+ PROV97:0 ""
  PROV98:0 ""
  PROV99:0 ""
  PROV100:0 ""
  PROV101:0 ""
  PROV102:0 ""
- PROV103:1 ""
+ PROV103:0 ""
  PROV104:0 ""
  PROV105:0 ""
  PROV106:0 ""
@@ -119,36 +119,36 @@
  PROV118:0 "Albarroca"
  PROV119:0 "Blava Puerto"
  PROV120:0 ""
- PROV121:0 ""
+ PROV121:0 "Solemarcia"
  PROV122:0 ""
  PROV123:0 ""
- PROV124:0 ""
+ PROV124:0 "Colibrínido"
  PROV125:0 "Harba Minor"
- PROV126:0 "Cape of Elena"
+ PROV126:0 "Elena Cape"
  PROV127:0 ""
- PROV128:1 ""
+ PROV128:0 ""
  PROV129:0 ""
  PROV130:0 ""
  PROV131:0 ""
  PROV132:0 ""
- PROV133:2 ""
+ PROV133:0 ""
  PROV134:0 ""
  PROV135:0 ""
- PROV136:1 ""
+ PROV136:0 ""
  PROV137:0 "Eliana"
- PROV138:0 ""
+ PROV138:0 "Monteverdi"
  PROV139:0 "Navarecipa"
  PROV140:0 ""
- PROV141:1 ""
+ PROV141:0 ""
  PROV142:0 ""
- PROV143:1 ""
+ PROV143:0 ""
  PROV144:0 ""
  PROV145:0 ""
  PROV146:0 ""
  PROV147:0 ""
  PROV148:0 ""
  PROV149:0 ""
- PROV150:1 ""
+ PROV150:0 ""
  PROV151:0 ""
  PROV152:0 "La ciudad de san Olegaro"
  PROV153:0 ""
@@ -166,31 +166,31 @@
  PROV165:0 ""
  PROV166:0 ""
  PROV167:0 ""
- PROV168:1 ""
+ PROV168:0 ""
  PROV169:0 ""
  PROV170:0 ""
- PROV171:1 ""
- PROV172:1 ""
+ PROV171:0 ""
+ PROV172:0 ""
  PROV173:0 "Almazamal"
- PROV174:3 ""
+ PROV174:0 "Águilarroyo"
  PROV175:0 ""
  PROV176:0 ""
  PROV177:0 ""
  PROV178:0 ""
  PROV179:0 ""
- PROV180:1 ""
+ PROV180:0 ""
  PROV181:0 ""
- PROV182:1 ""
+ PROV182:0 ""
  PROV183:0 "Caladida"
  PROV184:0 ""
  PROV185:0 ""
- PROV186:1 ""
+ PROV186:0 "Riovolare "
  PROV187:0 "Bosalva"
  PROV188:0 ""
  PROV189:0 "Sierra Verde"
- PROV190:1 "Alanqisam alsughraa"
- PROV191:1 ""
- PROV192:1 ""
+ PROV190:0 "Alanqisam alsughraa"
+ PROV191:0 ""
+ PROV192:0 ""
  PROV193:0 ""
  PROV194:0 "Volodian Strait"
  PROV195:0 ""
@@ -198,22 +198,22 @@
  PROV197:0 ""
  PROV198:0 ""
  PROV199:0 "Altaqadim"
- PROV200:1 ""
+ PROV200:0 ""
  PROV201:0 ""
  PROV202:0 ""
  PROV203:0 ""
  PROV204:0 ""
- PROV205:1 ""
- PROV206:2 ""
+ PROV205:0 ""
+ PROV206:0 ""
  PROV207:0 ""
  PROV208:0 ""
  PROV209:0 ""
  PROV210:0 ""
- PROV211:1 ""
+ PROV211:0 ""
  PROV212:0 "Drachenmaw Southern Coast"
  PROV213:0 ""
  PROV214:0 ""
- PROV215:1 ""
+ PROV215:0 ""
  PROV216:0 ""
  PROV217:0 ""
  PROV218:0 ""
@@ -235,23 +235,23 @@
  PROV234:0 "Uzkolian Strait"
  PROV235:0 ""
  PROV236:0 ""
- PROV237:1 ""
+ PROV237:0 ""
  PROV238:0 ""
- PROV239:1 ""
- PROV240:1 ""
- PROV241:1 ""
+ PROV239:0 ""
+ PROV240:0 ""
+ PROV241:0 ""
  PROV242:0 "Gwynedd"
  PROV243:0 "Lincolnshire"
  PROV244:0 "Lancashire"
- PROV245:1 "York"
+ PROV245:0 "York"
  PROV246:0 "Northumberland"
  PROV247:0 "Cumbria"
  PROV248:0 "Lothian"
  PROV249:0 "Ayrshire"
- PROV250:1 "Perth"
- PROV251:1 "Aberdeen"
+ PROV250:0 "Perth"
+ PROV251:0 "Aberdeen"
  PROV252:0 "Inverness"
- PROV253:1 "Outer Hebrides"
+ PROV253:0 "Outer Hebrides"
  PROV254:0 "Poznan"
  PROV255:0 "Kalisz"
  PROV256:0 "Plock"
@@ -263,10 +263,10 @@
  PROV262:0 "Krakow"
  PROV263:0 "Ratibor"
  PROV264:0 "Breslau"
- PROV265:1 "Brno"
+ PROV265:0 "Brno"
  PROV266:0 "Prague"
  PROV267:0 "Plzen"
- PROV268:1 "Suceava"
+ PROV268:0 "Suceava"
  PROV269:0 "Podlasie"
  PROV270:0 "Trakai"
  PROV271:0 "Samogitia"
@@ -331,7 +331,7 @@
  PROV330:0 "Trebizond"
  PROV331:0 "Erzurum"
  PROV332:0 "Marash"
- PROV333:2 "Mallorca"
+ PROV333:0 "Mallorca"
  PROV334:0 "Tangiers"
  PROV335:0 "Melilla"
  PROV336:0 "Tlemcen"
