--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -109,7 +109,7 @@
  PROV108:0 ""
  PROV109:0 ""
  PROV110:0 ""
- PROV111:0 "Imperstadter Coast" 
+ PROV111:0 "Geoberic Bay" 
  PROV112:0 ""
  PROV113:0 ""
  PROV114:0 ""
@@ -509,25 +509,25 @@
  PROV508:0 ""
  PROV509:0 ""
  PROV510:0 ""
- PROV511:0 ""
+ PROV511:0 "Anabendorf"
  PROV512:0 "Orienfort"
- PROV513:0 ""
+ PROV513:0 "Erenau"
  PROV514:0 "Brehburg"
- PROV515:0 ""
- PROV516:0 ""
+ PROV515:0 "Seischun"
+ PROV516:0 "Erund"
  PROV517:0 "Tiegenhof"
- PROV518:0 ""
- PROV519:0 ""
+ PROV518:0 "Geda"
+ PROV519:0 "Brauberg"
  PROV520:0 "Sprechtwald"
  PROV521:0 "Altstadt am Grüne"
  PROV522:0 ""
  PROV523:0 ""
- PROV524:0 ""
- PROV525:0 ""
+ PROV524:0 "Geschen"
+ PROV525:0 "Waldsee"
  PROV526:0 "Scarfegg"
- PROV527:0 ""
+ PROV527:0 "Rehnfort"
  PROV528:0 "Blatov"
- PROV529:0 ""
+ PROV529:0 "Cherun"
  PROV530:0 ""
  PROV531:0 ""
  PROV532:0 "Ohrenburg"
@@ -646,45 +646,45 @@
  PROV645:0 "Cacumuds"
  PROV646:0 ""
  PROV647:0 ""
- PROV648:0 "Halmahera"
- PROV649:0 "Ternate"
- PROV650:0 "Tidore"
- PROV651:0 "Sulu"
- PROV652:0 "Maguindanao"
- PROV653:0 "Lanao"
- PROV654:0 "Samar"
- PROV655:0 "Palawan"
- PROV656:0 "Manila"
- PROV657:0 "Ilocos"
- PROV658:0 "Cagayan"
- PROV659:0 "Lingga"
- PROV660:0 "Sibsongbanna"
- PROV661:0 "Dali"
- PROV662:0 "Yunnan"
- PROV663:0 "Guangnan"
- PROV664:0 "Lingyun"
- PROV665:0 "Shiuhing"
- PROV666:0 "Kingchow"
- PROV667:0 "Canton"
- PROV668:0 "Macau"
- PROV669:0 "Fuzhou"
- PROV670:0 "Ganzhou"
- PROV671:0 "Changsha"
- PROV672:0 "Wuling"
- PROV673:0 "Zhenyuan"
- PROV674:0 "Guiyang"
- PROV675:0 "Umung"
- PROV676:0 "Shigatse"
- PROV677:0 "Lhasa"
- PROV678:0 "Tachienlu"
- PROV679:0 "Chengdu"
- PROV680:0 "Chongqing"
- PROV681:0 "Yichang"
- PROV682:0 "Wuchang"
- PROV683:0 "Nanchang"
- PROV684:0 "Hangzhou"
- PROV685:0 "Yangzhou"
- PROV686:0 "Anqing"
+ PROV648:0 ""
+ PROV649:0 ""
+ PROV650:0 ""
+ PROV651:0 ""
+ PROV652:0 ""
+ PROV653:0 ""
+ PROV654:0 ""
+ PROV655:0 ""
+ PROV656:0 ""
+ PROV657:0 ""
+ PROV658:0 ""
+ PROV659:0 ""
+ PROV660:0 ""
+ PROV661:0 ""
+ PROV662:0 ""
+ PROV663:0 ""
+ PROV664:0 ""
+ PROV665:0 ""
+ PROV666:0 ""
+ PROV667:0 ""
+ PROV668:0 ""
+ PROV669:0 ""
+ PROV670:0 ""
+ PROV671:0 ""
+ PROV672:0 ""
+ PROV673:0 ""
+ PROV674:0 ""
+ PROV675:0 ""
+ PROV676:0 ""
+ PROV677:0 ""
+ PROV678:0 ""
+ PROV679:0 ""
+ PROV680:0 ""
+ PROV681:0 ""
+ PROV682:0 ""
+ PROV683:0 ""
+ PROV684:0 ""
+ PROV685:0 ""
+ PROV686:0 ""
  PROV687:0 ""
  PROV688:0 ""
  PROV689:0 ""
@@ -2014,7 +2014,7 @@
  rand_prov_east:0 "East $prov$"
  rand_prov_east2:0 "Eastern $prov$"
  rand_prov_west:0 "West $prov$"
- rand_prov_west2:0 "Western $prov$
+ rand_prov_west2:0 "Western $prov$"
  RAND_SEA_NAME001:0 "Sea of Test1"
  RAND_SEA_NAME002:0 "Sea of Test2"
  RAND_SEA_NAME003:0 "Sea of Test3"
