--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- EHR:0 "Ehrenia"
+ EHR:0 "Ehrenstaat"
  EHR_ADJ:0 "Ehren"
  ZAN:0 "Zandigehaven"
  ZAN_ADJ:0 "Zandigehaven"
@@ -94,8 +94,8 @@
  CHA_ADJ:0 "Chalian"
  CHO:0 "Chofeudia"
  CHO_ADJ:0 "Chofeudian"
- CRS:0 "Crossed Spears"
- CRS_ADJ:0 "crs adjhdiosahdiol"
+ CRS:0 "Arsènoux"
+ CRS_ADJ:0 "Arsènouxian"
  ANA:0 "Antauria"
  ANA_ADJ:0 "Antaurian"
  HER:0 "Hermatia"
@@ -311,3 +311,48 @@
  ZIL_ADJ:0 "Zilverpoorter"
  ADA:0 "Adasmerragadde"
  ADA_ADJ:0 "Adasmerragaddan"
+
+ RUB:0 "Rubmeo"
+ RUB_ADJ:0 "Rubmean"
+ SCU:0 "Scuneo"
+ SCU_ADJ:0 "Scunean"
+ PIE:0 "Pietrania"
+ PIE_ADJ:0 "Pietranian"
+ ORA:0 "Orasolo"
+ ORA_ADJ:0 "Orasolan"
+ VIA:0 "Viacheli"
+ VIA_ADJ:0 "Viachelian"
+ PDN:0 "Paduano"
+ PDN_ADJ:0 "Paduanian"
+ TIE:0 "Tiepol"
+ TIE_ADJ:0 "Tiepolan"
+ BRI:0 "Brianola"
+ BRI_ADJ:0 "Brianolan"
+ EST:0 "Estne"
+ EST_ADJ:0 "Estnean"
+ SAG:0 "Saganaria"
+ SAG_ADJ:0 "Saganarian"  
+ SER:0 "Serenima"
+ SER_ADJ:0 "Sereniman"
+ DGL:0 "Dagillo"
+ DGL_ADJ:0 "Dagillan"
+ GRA:0 "Grafouli"
+ GRA_ADJ:0 "Grafoulian"
+ SAR:0 "Sarneo"
+ SAR_ADJ:0 "Sarnean"
+ CHL:0 "Cholia"
+ CHL_ADJ:0 "Cholian"
+ ALB:0 "Alabergia"
+ ALB_ADJ:0 "Alabergian"
+ CON:0 "Conferma"
+ CON_ADJ:0 "Conferman"
+ MAC:0 "Macono"
+ MAC_ADJ:0 "Maconian"
+ CAP:0 "Capiranellan League"
+ CAP_ADJ:0 "Capiranellan"
+ VEC:0 "Veceingo"
+ VEC_ADJ:0 "Veceingian"
+ ZON:0 "Zonachia"
+ ZON_ADJ:0 "Zonachian"
+ COR:0 "Coraniro"
+ COR_ADJ:0 "Coraniran"
