--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -73,7 +73,7 @@
  PROV72:0 ""
  PROV73:0 ""
  PROV74:0 "Riyaduna"
- PROV75:0 ""
+ PROV75:0 "Rizqal"
  PROV76:0 ""
  PROV77:0 ""
  PROV78:0 ""
@@ -84,10 +84,10 @@
  PROV83:0 ""
  PROV84:0 ""
  PROV85:0 ""
- PROV86:0 ""
+ PROV86:0 "Boujloudiya"
  PROV87:0 ""
  PROV88:0 ""
- PROV89:0 ""
+ PROV89:0 "South Al-Bahriyah"
  PROV90:0 ""
  PROV91:0 ""
  PROV92:0 ""
@@ -113,7 +113,7 @@
  PROV112:0 ""
  PROV113:0 ""
  PROV114:0 ""
- PROV115:0 "Voltireni Sea"
+ PROV115:0 ""
  PROV116:0 "Vallacielo"
  PROV117:0 "Lentisca"
  PROV118:0 "Albarroca"
@@ -141,7 +141,7 @@
  PROV140:0 ""
  PROV141:0 ""
  PROV142:0 ""
- PROV143:0 ""
+ PROV143:0 "Zibarat"
  PROV144:0 ""
  PROV145:0 ""
  PROV146:0 ""
@@ -152,12 +152,12 @@
  PROV151:0 ""
  PROV152:0 "Alburji"
  PROV153:0 ""
- PROV154:0 ""
- PROV155:0 ""
+ PROV154:0 "East Al-Bahriyah"
+ PROV155:0 "North Al-Bahriyah"
  PROV156:0 ""
  PROV157:0 ""
  PROV158:0 ""
- PROV159:0 ""
+ PROV159:0 "Iskabban"
  PROV160:0 ""
  PROV161:0 ""
  PROV162:0 ""
@@ -192,34 +192,34 @@
  PROV191:0 ""
  PROV192:0 ""
  PROV193:0 ""
- PROV194:0 "Volodian Strait"
+ PROV194:0 "Outer Bay"
  PROV195:0 "Algharqim"
  PROV196:0 ""
- PROV197:0 ""
+ PROV197:0 "Dushmira"
  PROV198:0 ""
  PROV199:0 "Altaqadim"
- PROV200:0 ""
- PROV201:0 ""
- PROV202:0 ""
- PROV203:0 ""
- PROV204:0 ""
- PROV205:0 ""
+ PROV200:0 "Huzamjar"
+ PROV201:0 "Al-Wadihajara"
+ PROV202:0 "Hamadani Bay"
+ PROV203:0 "Alghamdhah"
+ PROV204:0 "Alshawahid"
+ PROV205:0 "Alzamzam"
  PROV206:0 "Nahralnoriya"
- PROV207:0 ""
+ PROV207:0 "Almutawiyah"
  PROV208:0 ""
  PROV209:0 "Liqalnahr"
- PROV210:0 ""
+ PROV210:0 "Almufqoodah"
  PROV211:0 ""
- PROV212:0 ""
+ PROV212:0 "Coast of Rubmeo"
  PROV213:0 ""
  PROV214:0 ""
  PROV215:0 ""
  PROV216:0 ""
- PROV217:0 ""
- PROV218:0 ""
- PROV219:0 ""
- PROV220:0 ""
- PROV221:0 ""
+ PROV217:0 "Zawarqabad"
+ PROV218:0 "Barqanah"
+ PROV219:0 "Abyadard"
+ PROV220:0 "Zawarqabad"
+ PROV221:0 "Hercogaostan Coast"
  PROV222:0 ""
  PROV223:0 ""
  PROV224:0 ""
@@ -320,7 +320,7 @@
  PROV319:0 ""
  PROV320:0 ""
  PROV321:0 ""
- PROV322:0 ""
+ PROV322:0 "Niheyabdan Sea"
  PROV323:0 ""
  PROV324:0 ""
  PROV325:0 ""
@@ -413,7 +413,7 @@
  PROV412:0 ""
  PROV413:0 ""
  PROV414:0 ""
- PROV415:0 ""
+ PROV415:0 "South Harban Coast"
  PROV416:0 ""
  PROV417:0 ""
  PROV418:0 ""
@@ -424,7 +424,7 @@
  PROV423:0 ""
  PROV424:0 ""
  PROV425:0 ""
- PROV426:0 ""
+ PROV426:0 "South Cabiran Coast"
  PROV427:0 ""
  PROV428:0 ""
  PROV429:0 ""
@@ -490,25 +490,25 @@
  PROV489:0 ""
  PROV490:0 ""
  PROV491:0 "Dreckburg"
- PROV492:0 ""
+ PROV492:0 "Newygrod"
  PROV493:0 "Holmberg"
- PROV494:0 ""
+ PROV494:0 "Rehwald"
  PROV495:0 "Magkirche"
  PROV496:0 "Merkast"
- PROV497:0 ""
- PROV498:0 ""
- PROV499:0 ""
+ PROV497:0 "Endaus"
+ PROV498:0 "Liscach"
+ PROV499:0 "Steivern"
  PROV500:0 "Cacumuds"
  PROV501:0 "Bleiburg"
  PROV502:0 "Dorshau"
- PROV503:0 ""
+ PROV503:0 "Handaus"
  PROV504:0 "Piccoporta"
  PROV505:0 "Meslitz"
- PROV506:0 ""
- PROV507:0 ""
- PROV508:0 ""
- PROV509:0 ""
- PROV510:0 ""
+ PROV506:0 "Eberland"
+ PROV507:0 "Abendohn"
+ PROV508:0 "Renenacht"
+ PROV509:0 "Westküste"
+ PROV510:0 "Bereneich"
  PROV511:0 "Anabendorf"
  PROV512:0 "Orienfort"
  PROV513:0 "Erenau"
@@ -521,74 +521,74 @@
  PROV520:0 "Sprechtwald"
  PROV521:0 "Altstadt am Grüne"
  PROV522:0 ""
- PROV523:0 ""
+ PROV523:0 "Geoberic coast"
  PROV524:0 "Geschen"
  PROV525:0 "Waldsee"
  PROV526:0 "Scarfegg"
  PROV527:0 "Rehnfort"
  PROV528:0 "Blatov"
  PROV529:0 "Cherun"
- PROV530:0 ""
- PROV531:0 ""
+ PROV530:0 "Waldende"
+ PROV531:0 "Cacumuds"
  PROV532:0 "Ohrenburg"
  PROV533:0 "Maultierstadt"
- PROV534:0 ""
- PROV535:0 ""
+ PROV534:0 "Mittelgebirge"
+ PROV535:0 "Hirschwald"
  PROV536:0 "Grosshof"
  PROV537:0 "Reka"
  PROV538:0 "Medigrüd"
  PROV539:0 "Nordkirche"
  PROV540:0 "Blatzmag"
- PROV541:0 ""
+ PROV541:0 "Tenuner"
  PROV542:0 "Zieglerheim"
- PROV543:0 ""
+ PROV543:0 "Dichterwald"
  PROV544:0 "Magstadt"
  PROV545:0 "Glinau"
- PROV546:0 ""
- PROV547:0 ""
- PROV548:0 ""
- PROV549:0 ""
- PROV550:0 ""
+ PROV546:0 "Niheyan Ocean 1"
+ PROV547:0 "Schelazheim"
+ PROV548:0 "Keltmark Coast"
+ PROV549:0 "Kleindorf"
+ PROV550:0 "Elchdorf"
  PROV551:0 "Murom"
- PROV552:0 ""
- PROV553:0 ""
- PROV554:0 ""
+ PROV552:0 "Modlatz"
+ PROV553:0 "Seltfurt"
+ PROV554:0 "Altaugen"
  PROV555:0 "Schinkheim"
- PROV556:0 ""
+ PROV556:0 "Semeniau"
  PROV557:0 "Dubrenheim"
  PROV558:0 "Rogau"
  PROV559:0 "Neuefeld"
  PROV560:0 "Limstadt"
  PROV561:0 "Lichtung"
  PROV562:0 "Zoltstein"
- PROV563:0 ""
- PROV564:0 ""
+ PROV563:0 "Trockwald"
+ PROV564:0 "Ifritican coast"
  PROV565:0 ""
  PROV566:0 "Adrianburg"
  PROV567:0 "Biertal"
  PROV568:0 "Bodendorf"
  PROV569:0 ""
  PROV570:0 "Falxburbg"
- PROV571:0 ""
- PROV572:0 ""
- PROV573:0 ""
- PROV574:0 ""
- PROV575:0 ""
- PROV576:0 ""
- PROV577:0 ""
- PROV578:0 ""
+ PROV571:0 "Coast of Altaqadim"
+ PROV572:0 "Pratzau"
+ PROV573:0 "Jenkedy"
+ PROV574:0 "Bohmins"
+ PROV575:0 "Okrajna"
+ PROV576:0 "Rolasta"
+ PROV577:0 "Jižní pevnost"
+ PROV578:0 "Velký les"
  PROV579:0 ""
- PROV580:0 ""
- PROV581:0 ""
+ PROV580:0 "Arodend"
+ PROV581:0 "Eneradech"
  PROV582:0 "Wessburg"
- PROV583:0 ""
- PROV584:0 ""
- PROV585:0 ""
- PROV586:0 ""
+ PROV583:0 "Weddasch"
+ PROV584:0 "Abhanburg"
+ PROV585:0 "Raruth"
+ PROV586:0 "Wolledorf"
  PROV587:0 "Oddelean Range"
  PROV588:0 ""
- PROV589:0 ""
- PROV590:0 ""
+ PROV589:0 "Oddelende"
+ PROV590:0 "Oddelpass"
  PROV591:0 "Oddelean Range"
  PROV592:0 ""
  PROV593:0 ""
@@ -624,7 +624,7 @@
  PROV623:0 "Grobhalde"
  PROV624:0 "Äter"
  PROV625:0 "Vizäm"
- PROV626:0 ""
+ PROV626:0 "Diechtung"
  PROV627:0 "Kupfthal"
  PROV628:0 "Kohlheim"
  PROV629:0 ""
@@ -635,14 +635,14 @@
  PROV634:0 "Genundach"
  PROV635:0 "Nunettin"
  PROV636:0 "Dieschenet"
- PROV637:0 ""
+ PROV637:0 "Rotzwasch"
  PROV638:0 "Schlaufberg"
- PROV639:0 ""
+ PROV639:0 "Ausigen"
  PROV640:0 ""
- PROV641:0 ""
- PROV642:0 ""
+ PROV641:0 "Besigenhof"
+ PROV642:0 "Hegenstadt"
  PROV643:0 "Altefeld"
- PROV644:0 ""
+ PROV644:0 "Neusatz"
  PROV645:0 "Cacumuds"
  PROV646:0 ""
  PROV647:0 ""
@@ -659,14 +659,14 @@
  PROV658:0 ""
  PROV659:0 ""
  PROV660:0 ""
- PROV661:0 ""
+ PROV661:0 "Himmelnberg"
  PROV662:0 ""
- PROV663:0 ""
+ PROV663:0 "Eisenburg"
  PROV664:0 ""
  PROV665:0 ""
  PROV666:0 ""
- PROV667:0 ""
- PROV668:0 ""
+ PROV667:0 "Kristen"
+ PROV668:0 "Grossfeld"
  PROV669:0 ""
  PROV670:0 ""
  PROV671:0 ""
@@ -696,7 +696,7 @@
  PROV695:0 ""
  PROV696:0 ""
  PROV697:0 ""
- PROV698:0 "Aufentine"
+ PROV698:0 "Aufentin"
  PROV699:0 ""
  PROV700:0 ""
  PROV701:0 ""
@@ -704,7 +704,7 @@
  PROV703:0 ""
  PROV704:0 ""
  PROV705:0 ""
- PROV706:0 ""
+ PROV706:0 "Mrawa"
  PROV707:0 ""
  PROV708:0 ""
  PROV709:0 ""
@@ -718,55 +718,55 @@
  PROV717:0 ""
  PROV718:0 ""
  PROV719:0 ""
- PROV720:0 "Dornogovi"
- PROV721:0 "Setsen"
+ PROV720:0 "Gornydon"
+ PROV721:0 ""
  PROV722:0 "Jirem"
- PROV723:0 "Xilin Gol"
- PROV724:0 "Hulunbuir"
- PROV725:0 "Cicigar"
- PROV726:0 "Shenyang"
- PROV727:0 "Aigun"
- PROV728:0 "Tuwan"
- PROV729:0 "Bohori"
- PROV730:0 "Girin"
- PROV731:0 "Ilan Hala"
- PROV732:0 "Hamheung"
- PROV733:0 "Hwangju"
- PROV734:0 "Wonju"
- PROV735:0 "Hanseong"
- PROV736:0 "Sangju"
- PROV737:0 "Jeonju"
- PROV738:0 "Sakam"
- PROV739:0 "Kashgar"
- PROV740:0 "Chanderi"
- PROV741:0 "Cumana"
- PROV742:0 "Angostura"
- PROV743:0 "Essequibo"
- PROV744:0 "Demerara"
- PROV745:0 "Paramaribo"
- PROV746:0 "Cayenne"
- PROV747:0 "Amapa"
- PROV748:0 "Belem"
- PROV749:0 "Maranhao"
- PROV750:0 "Crato"
- PROV751:0 "Ceara"
- PROV752:0 "Oeiras"
- PROV753:0 "Rio Grande"
- PROV754:0 "Paraiba"
- PROV755:0 "Pernambuco"
- PROV756:0 "Bahia"
- PROV757:0 "Ilheus"
- PROV758:0 "Goias"
- PROV759:0 "Diamantina"
- PROV760:0 "Porto Seguro"
- PROV761:0 "Espirito Santo"
- PROV762:0 "Sao Tome"
- PROV763:0 "Rio de Janeiro"
- PROV764:0 "Santo Amaro"
- PROV765:0 "Minas Gerais"
- PROV766:0 "Sao Vicente"
- PROV767:0 "Ortelsburg"
- PROV768:0 "Guayra"
+ PROV723:0 ""
+ PROV724:0 ""
+ PROV725:0 ""
+ PROV726:0 ""
+ PROV727:0 ""
+ PROV728:0 ""
+ PROV729:0 ""
+ PROV730:0 ""
+ PROV731:0 ""
+ PROV732:0 ""
+ PROV733:0 ""
+ PROV734:0 ""
+ PROV735:0 ""
+ PROV736:0 ""
+ PROV737:0 ""
+ PROV738:0 ""
+ PROV739:0 ""
+ PROV740:0 ""
+ PROV741:0 ""
+ PROV742:0 ""
+ PROV743:0 ""
+ PROV744:0 ""
+ PROV745:0 ""
+ PROV746:0 ""
+ PROV747:0 ""
+ PROV748:0 ""
+ PROV749:0 ""
+ PROV750:0 ""
+ PROV751:0 ""
+ PROV752:0 ""
+ PROV753:0 ""
+ PROV754:0 ""
+ PROV755:0 ""
+ PROV756:0 ""
+ PROV757:0 ""
+ PROV758:0 ""
+ PROV759:0 ""
+ PROV760:0 ""
+ PROV761:0 ""
+ PROV762:0 ""
+ PROV763:0 ""
+ PROV764:0 ""
+ PROV765:0 ""
+ PROV766:0 ""
+ PROV767:0 ""
+ PROV768:0 ""
  PROV769:0 "Curitiba"
  PROV770:0 "Braslaw"
  PROV771:0 "Vitebsk"
